--- a/02text.html
+++ b/02text.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>문자 관련 태그들</h1>
-    <h2>제목 태그</h2>
+    <h2 id="heading">제목 태그</h2>
     <h1>가장 큰 제목</h1>
     <h2>두번째 큰 제목</h2>
     <h3>세번쨰 큰 제목</h3>
@@ -16,7 +16,7 @@
     <h6>가장 작은 제목</h6>
     <hr>
 
-    <h2>단락 태그</h2>
+    <h2 id="paragraph">단락 태그</h2>
     <p>이달 열리는 세계 최대 게임 행사 '게임스컴 2025'에 참여하는 방문객들은 삼성의 최신형 휴대폰 '갤럭시 Z 폴드7'으로 넷마블 신작 게임을 플레이할 수 있게 됐다.</p>
 
     <p>넷마블이 삼성전자와 함께 글로벌 게임 행사 '게임스컴 2025'에서 PC·모바일 멀티 플랫폼 신작 '몬길: STAR DIVE'(이하 몬길)를 선보인다고 6일 밝혔다.</p>
@@ -29,7 +29,7 @@
 
     <p>또 몬길은 오는 22~23일 삼성전자가 독일 쾰른 독2(Dock2) 행사장에서 여는 이용자 체험 행사 '더 월드 오브 #플레이갤럭시(The World of #PlayGalaxy)'에 참가한다. 행사 현장에는 지난 7월 '갤럭시 언팩 2025'에서 공개된 '갤럭시 Z 폴드7' 시연대가 마련돼 몬길을 플레이할 수 있다. 삼성전자는 게임스컴 방문객들의 편의를 위해 쾰른메세 전시장과 Dock2 행사장 간 셔틀버스를 운영할 예정이다.</p>
 
-    <h2>줄바꿈 태그</h2>
+    <h2 id="Linebreak">줄바꿈 태그</h2>
     <p>
     챗GPT 개발사인 오픈AI가 두 개의 오픈소스 AI 모델을 5일(현지시간) 공개했다. 지금까지 폐쇄형 모델인 챗GPT를 중심으로 AI 생태계를 구축해온 오픈AI가 처음으로 오픈 모델을 내놓으며 전략 전환에 나선 것이다.<br><br>
 
@@ -51,12 +51,12 @@
     </p>
     <!--뒤에 br 한번 줄바꾸기 두번 줄바꾸고 한번 더띄기-->
 
-    <h2>특수문자 - entitey reference</h2> 
+    <h2 id="special">특수문자 - entitey reference</h2> 
     <!--<h1> h는 제목 숫자는 텍스트 크기-->
     <p> 1 + 3 &gt; 5</p>
     <p>&copy; &reg; </p>
 
-    <h2>텍스트 꾸밈</h2>
+    <h2 id="embellishment">텍스트 꾸밈</h2>
     <strong>시간은 금이라구, 친구!!</strong>
     <!--굵게 강조할 텍스트-->
     <b>시간은 금이라구, 친구!!</b>
@@ -68,8 +68,8 @@
     <!--이탤릭체로만 표시할 텍스트-->
 
     <br><br>
-    <p>피타고라스 정리 : a<sup>2</sup> + b<sup>2</sup> = c<sup>2</sup></p> 
-    <p>카오스 이론 : x<sub>t-1</sub> = kx<sub>t</sub>(1-x<sub>t</sub>)</p>
+    <p>피타고라스 정리 : a<sup>2</sup> + b<sup>2</sup> = c<sup>2</sup></p> <!--글자 올리기-->
+    <p>카오스 이론 : x<sub>t-1</sub> = kx<sub>t</sub>(1-x<sub>t</sub>)</p> <!--글자 내리기-->
     <p><ins>피타고라스 정의</ins>은/는 수학 역사상 가장 중요한 식 중의 하나로 여겨지고 있다.</p>
     <p><mark>피타고라스 정의</mark>은/는 수학 역사상 가장 중요한 식 중의 하나로 여겨지고 있다.</p>  
     <pre>
@@ -80,7 +80,7 @@
     <!--쓴 그대로 텍스트를 출력 (폰트까지 출력함)-->
     <p>고블린이 다음과 같이 얘기했다.</p>
     <blockquote>
-        시간은 금이라구, 친구!!
+        시간은 금이라구, 친구!!!@#!@#
     </blockquote>
     <!--인용구 들여쓰기-->
 
