테이블 관련 태그

--- a/04list.html
+++ b/04list.html
@@ -91,15 +91,15 @@
 
         <h2>네비게이션 메뉴</h2>
         <ul>
-            <li><a href="#">메일</a></li>
-            <li><a href="#">카페</a></li>
-            <li><a href="#">블로그</a></li>
-            <li><a href="#">스토어</a></li>
-            <li><a href="#">뉴스</a></li>
-            <li><a href="#">증원</a></li>
-            <li><a href="#">지도</a></li>
-            <li><a href="#">웹툰</a></li>
-            <li><a href="#">치지직</a></li>
+            <li><a href="https://nid.naver.com/nidlogin.login?url=https%3A%2F%2Fmail.naver.com%2F">메일</a></li>
+            <li><a href="https://section.cafe.naver.com/ca-fe/home">카페</a></li>
+            <li><a href="https://section.blog.naver.com/BlogHome.naver?directoryNo=0&currentPage=1&groupId=0">블로그</a></li>
+            <li><a href="https://shopping.naver.com/ns/home">스토어</a></li>
+            <li><a href="https://news.naver.com/">뉴스</a></li>
+            <li><a href="https://finance.naver.com/">증권</a></li>
+            <li><a href="https://map.naver.com/p?c=15.00,0,0,0,dh">지도</a></li>
+            <li><a href="https://comic.naver.com/index">웹툰</a></li>
+            <li><a href="https://chzzk.naver.com/">치지직</a></li>
         </ul>
 </body>
 </html>
